--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-adaptation-xiaomi-vayu (4+git20240618211339.2322310.droidian) trixie; urgency=medium
+adaptation-xiaomi-vayu (5+git20240619200006.d07dd62.droidian) trixie; urgency=medium
+
+  * Update debian changelog
+  * Revert: commit 962cd88, setting phoc HWCOMPOSER scale to 3 again
+
+ -- berbascum <berbascum@ticv.cat>  Wed, 19 Jun 2024 22:00:06 +0200
+
+adaptation-xiaomi-vayu (4) trixie; urgency=medium
 
   * Update debian changelog
   * Update: packade deps, some splitted from control to package-sideload-create.d/xiaomi-vayu
