--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,14 @@
-adaptation-xiaomi-vayu (8+git20240623215738.7d6fdfa.droidian) trixie; urgency=medium
+adaptation-xiaomi-vayu (9+git20240624202817.fe1a3c1.droidian) trixie; urgency=medium
+
+  * Update debian changelog
+  * New: fix queekboard execution since is taking too long until it appears
+  * Update: doc README.md with some fixes information
+  * Update: systemd debian links file
+  * Fix: error on the bluetooth inotify log name removing a end space
+
+ -- berbascum <berbascum@ticv.cat>  Mon, 24 Jun 2024 22:28:17 +0200
+
+adaptation-xiaomi-vayu (8) trixie; urgency=medium
 
   * Update debian changelog
   * Improve: Some improvements on fixes names, and enable an execution log for all script fixes
