--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-adaptation-xiaomi-vayu (12+git20240802161243.46627af.droidian) trixie; urgency=medium
+adaptation-xiaomi-vayu (13+git20240802174715.059ddfc.droidian) trixie; urgency=medium
+
+  * Update changelog
+  * Clean some older links creation from debian packaging
+
+ -- berbascum <berbascum@ticv.cat>  Fri, 02 Aug 2024 19:47:15 +0200
+
+adaptation-xiaomi-vayu (12) trixie; urgency=medium
 
   * Update debian changelog
   * Update doc: update service names in README.md
