--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,13 @@
-adaptation-xiaomi-vayu (15+git20240907214731.793b7a2.droidian) trixie; urgency=medium
+adaptation-xiaomi-vayu (16+git20240908140340.8724008.droidian) trixie; urgency=medium
+
+  * (packaging) changelog: update
+  * (script) droidian-perf: fix x permission
+  * (service) apps-desktop-hide: service creation to hide from desktop the specified apps
+  * (doc) README.md: update adaptations information
+
+ -- berbascum <berbascum@ticv.cat>  Sun, 08 Sep 2024 16:03:40 +0200
+
+adaptation-xiaomi-vayu (15) testing; urgency=medium
 
   * Update copyright: git and debian license files
   * (packaging) control: Bump 4.14 vayu kernel from Arrow-190 to l4v3nx-314
